# KyleKing.github.io

./: .calcipy.json  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .ruff.toml  .uno.html  02_preApr.html  02_preFeb.html  02_preGuide.html  02_preJan.html  02_preMar.html  02_preMay.html  03_theRide.html  04_donate.html  404page.html  CNAME  README.html  README.md  _config.yml  about.md  archive.md  chart0.html  config.codekit  config.codekit3  foundation.html  generate_whatsapp.py  gulpfile.js  home.html  home.md  hovers.js  index.html  index.jade  index.js  main.json  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  seattleRoute.txt  side-project.html  (+2 more)
Master/: config.codekit  index.html  params.json
Meteor App/: .gitignore
Personal Website/: index.html
Profile/: .gitignore  Profile.html  index.html  mup.json
SASS/: layout.scss  main.scss
WIP/: N1.md  dassarma.md
_JADE/: header.jade
_SASS/: footer.scss  main.scss  sliding-menu.scss
_drafts/: Test-Draft.markdown
_includes/: footer.html  head.html  header.html
_layouts/: archive.html  categories.html  default.html  page.html  post.html
_posts/: 2014-03-03-Chipotle-Fundraising-Night.markdown  2014-08-07-Test-Image.markdown  2014-08-07-Test.markdown  2014-08-08-Future-Improvements.markdown  2014-08-08-welcome-to-jekyll.markdown
about/: index.html
css/: main.css
docs/: MSD-SoftwareEngineer-2.md  MSD-SoftwareEngineer.md  SustainaMetrix_Methodology_Cheat_Sheet.md  bioe340.md  eagle.md  index.md  manifest.webmanifest  microfluidics.md  (+1 more)
docs-code/: README.md  gen_ref_nav.py
(+734 files in other folders)
