[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.commitizen]
version = "0.0.1"
version_files = ["personal_site/__init__.py:^__version", "pyproject.toml:^version"]

[tool.poetry]
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
] # https://pypi.org/classifiers/
description = "My personal website"
documentation = "https://kyleking.me"
include = ["LICENSE"]
keywords = []
license = "MIT"
maintainers = []
name = "personal_site"
readme = "docs-code/README.md"
repository = "https://github.com/kyleking/KyleKing.github.io"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.11.2"
corallium = ">=0.3.3"
mkdocs-live-edit-plugin = ">=0.1.2"

[tool.poetry.group.dev.dependencies]
calcipy = {extras = ["doc", "lint", "nox", "stale", "tags", "test", "types"], version = ">=1.6.3"}

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kyleking/KyleKing.github.io/issues"
"Changelog" = "https://github.com/kyleking/KyleKing.github.io/blob/main/docs-code/docs/CHANGELOG.md"

[tool.pyright]
include = ["personal_site"]
pythonVersion = "3.11"
